--- a/studio.html
+++ b/studio.html
@@ -13,7 +13,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <!--styles-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!--styles-->
     <link rel="stylesheet" href="./css/styles.css">
 
 
@@ -21,30 +24,35 @@
 
 <body>
     <header class="header">
-        <nav>
-            <a class="logo-link" href="./index.html"> Web<span class="logo-span">Studio</span></a>
-            <ul class="ul">
-                <li><a class="header-link" href="./studio.html">Studio</a></li>
-                <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="header-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="ul">
-                <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <div class="container-nav">
+                <nav class="header-nav">
+                    <a class="logo-link" href="./index.html"> Web<span class="logo-span">Studio</span></a>
+                    <ul class="header-menu">
+                        <li><a class="header-link" href="./studio.html">Studio</a></li>
+                        <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+                        <li><a class="header-link" href="">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address>
+                    <ul class="header-menu">
+                        <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </div>
     </header>
-
     <main>
        
     </main>
 
     <footer class="footer">
-        <a class="logo-link" href="./index.html"> Web<span class="span-logo-footer">Studio</span></a>
-        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+        <div class="container">
+            <a class="logo-link" href="./index.html"> Web<span class="span-logo-footer">Studio</span></a>
+            <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
 </body>
 
