--- a/portfolio.html
+++ b/portfolio.html
@@ -61,64 +61,82 @@
     <li class="li-card">
         <a class="card" href="#">
         <img src="./images/portfolio1.jpg" alt="banking" width="360" height="300">
-            <h3 class="name-project">Banking App Interface Concept</h3>
+        <div class="project-branch">
+        <h3 class="name-project">Banking App Interface Concept</h3>
             <p class="branch">App</p>
+        </div>
         </a>
     </li>
 <li class="li-card">
     <a class="card" href="#">
-    <img src="./images/portfolio2.jpg" alt="payment" width="360" height="300">
+    <img class="img-portfolio" src="./images/portfolio2.jpg" alt="payment" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Cashless Payment</h3>
     <p class="branch">Marketing</p>
+    </div>
     </a>
 </li>
 <li class="li-card">
     <a class="card" href="#">
     <img src="./images/portfolio3.jpg" alt="meditaion" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Meditaion App</h3>
     <p class="branch">App</p>
+    </div>
     </a>
 </li>
  <li class="li-card">
     <a class="card" href="#">
      <img src="./images/portfolio4.jpg" alt="taxi" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Taxi Service</h3>
     <p class="branch">Marketing</p>
+    </div>
     </a>
 </li>
 <li class="li-card">
     <a class="card" href="#">
     <img src="./images/portfolio5.jpg" alt="screen" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Screen Illustrations</h3>
     <p class="branch">Design</p>
+    </div>
     </a>
 </li>
 <li class="li-card">
     <a class="card" href="#">
     <img src="./images/portfolio6.jpg" alt="courses" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Online Courses</h3>
     <p class="branch">Marketing</p>
+    </div>
     </a>
 </li>
 <li class="li-card">
     <a class="card" href="#">
      <img src="./images/portfolio7.jpg" alt="instastories" width="360" height="300">
-    <h3 class="name-project">Instagram Stories Concept</h3>
+    <div class="project-branch">
+     <h3 class="name-project">Instagram Stories Concept</h3>
     <p class="branch">Design</p>
+    </div>
     </a>
 </li>
 <li class="li-card">
     <a class="card" href="#">
     <img src="./images/portfolio8.jpg" alt="organic food" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Organic Food</h3>
     <p class="branch">Web Site</p>
+    </div>
     </a>
  </li>
 <li class="li-card">
     <a class="card" href="#">
     <img src="./images/portfolio9.jpg" alt="coffee" width="360" height="300">
+    <div class="project-branch">
     <h3 class="name-project">Fresh Coffee</h3>
     <p class="branch">Web Site</p>
+    </div>
     </a>
 </li>
     </ul>
@@ -128,9 +146,11 @@
     </main>
 
     <footer class="footer">
-        <a class="logo-link" href="./index.html"> Web<span class="span-logo-footer">Studio</span></a>
-        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.</p>
+        <div class="container">
+            <a class="logo-link" href="./index.html"> Web<span class="span-logo-footer">Studio</span></a>
+            <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
 </body>
 
