--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <body>
     <!--Хедер = навігація + адреса-->
     <header class="header">
-        <div class="container" class="container-nav">
-           
+        <div class="container container-nav" >   
         <nav class="header-nav">
             <a class="logo-link" href="./index.html"> Web<span class="logo-span">Studio</span></a>
             <ul class="header-menu">
