--- a/portfolio.html
+++ b/portfolio.html
@@ -24,25 +24,21 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            <div class="container-nav">
-        <nav class="header-nav">
-            
-            <a class="logo-link" href="./index.html"> Web<span class="logo-span">Studio</span></a>
-            <ul class="header-menu">
-                <li><a class="header-link" href="./studio.html">Studio</a></li>
-                <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="header-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-
-        <address>
-            <ul class="header-menu">
-                <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
-            </div>
+        <div class="container container-nav">
+            <nav class="header-nav">
+                <a class="logo-link" href="./index.html"> Web<span class="logo-span">Studio</span></a>
+                <ul class="header-menu">
+                    <li><a class="header-link" href="./studio.html">Studio</a></li>
+                    <li><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="header-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address>
+                <ul class="header-menu">
+                    <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
         </div>
     </header>
 
